cabal-version: 3.4
name: unlifted
version: 0
synopsis: unlifted classes
description: unlifted classes
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2021 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with: GHC == 9.0.1

source-repository head
  type: git
  location: https://github.com/ekmett/linear-haskell
  subdir: unlifted

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.15 && < 5,
    ghc-prim

  -- enable warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wprepositive-qualified-module 

  -- disable warnings
  ghc-options:
    -Wno-simplifiable-class-constraints -Wno-orphans

library core
  import: base
  hs-source-dirs: core
  exposed-modules:
    Unlifted.Levitation
    Unlifted.Internal.Class
    Unlifted.Internal.Combinators
    Unlifted.Internal.List
    Unlifted.Internal.Maybe
    Unlifted.Internal.Syntax

-- DEFaults and DEFinitions
library def
  import: base
  build-depends: unlifted:{core}
  hs-source-dirs: def
  signatures: Rep
  exposed-modules: Def

library reps
  import: base
  hs-source-dirs: reps
  exposed-modules:
    AddrRep
    DoubleRep FloatRep
    IntRep Int8Rep Int16Rep Int32Rep Int64Rep
    LiftedRep
    TupleRep
    UnliftedRep
    WordRep Word8Rep Word16Rep Word32Rep Word64Rep

library
  import: base
  build-depends: unlifted:{def, core, reps}
  hs-source-dirs: src
  mixins:
    unlifted:def (Def as AddrDef)     requires (Rep as AddrRep),
    unlifted:def (Def as DoubleDef)   requires (Rep as DoubleRep),
    unlifted:def (Def as FloatDef)    requires (Rep as FloatRep),
    unlifted:def (Def as IntDef)      requires (Rep as IntRep),
    unlifted:def (Def as Int8Def)     requires (Rep as Int8Rep),
    unlifted:def (Def as Int16Def)    requires (Rep as Int16Rep),
    unlifted:def (Def as Int32Def)    requires (Rep as Int32Rep),
    unlifted:def (Def as Int64Def)    requires (Rep as Int64Rep),
    unlifted:def (Def as TupleDef)    requires (Rep as TupleRep),
    unlifted:def (Def as UnliftedDef) requires (Rep as UnliftedRep),
    unlifted:def (Def as WordDef)     requires (Rep as WordRep),
    unlifted:def (Def as Word8Def)    requires (Rep as Word8Rep),
    unlifted:def (Def as Word16Def)   requires (Rep as Word16Rep),
    unlifted:def (Def as Word32Def)   requires (Rep as Word32Rep),
    unlifted:def (Def as Word64Def)   requires (Rep as Word64Rep)
  exposed-modules:
    Unlifted.Prelude
    Unlifted.Class
    Unlifted.Combinators
    Unlifted.Syntax
    Unlifted.Maybe
    Unlifted.List
    Unlifted.Rep
    Unlifted.Rep.Internal.Double
    Unlifted.Rep.Internal.Float
    Unlifted.Rep.Internal.Int
    Unlifted.Rep.Internal.Int8
    Unlifted.Rep.Internal.Word
    Unlifted.Rep.Addr
    Unlifted.Rep.Double
    Unlifted.Rep.Float
    Unlifted.Rep.Int
    Unlifted.Rep.Int8
    Unlifted.Rep.Lifted
    Unlifted.Rep.Unlifted
    Unlifted.Rep.Word
  reexported-modules:
    Unlifted.Levitation
    
