cabal-version: 3.4
name: unlifted
version: 0
synopsis: unlifted classes
description: unlifted classes.
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2021 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with:
  GHC == 8.10.3

source-repository head
  type: git
  location: https://github.com/ekmett/linear-haskell
  subdir: unlifted

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.15 && < 5,
    ghc-prim

  -- enable warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wprepositive-qualified-module 

  -- disable warnings
  ghc-options:
    -Wno-simplifiable-class-constraints -Wno-orphans

library core
  import: base
  hs-source-dirs: core
  exposed-modules:
    Unlifted.Levitation
    Unlifted.Internal.Class
    Unlifted.Internal.Combinators
    Unlifted.Internal.List
    Unlifted.Internal.Maybe
    Unlifted.Internal.Syntax

-- DEFaults and DEFinitions
library def
  import: base
  build-depends: unlifted:{core}
  hs-source-dirs: def
  signatures: Rep
  exposed-modules: Def

library reps
  import: base
  hs-source-dirs: reps
  exposed-modules:
    Rep.A Rep.D Rep.F
    Rep.I Rep.I8 Rep.I16 Rep.I32 Rep.I64
    Rep.L Rep.U
    Rep.W Rep.W8 Rep.W16 Rep.W32 Rep.W64
    Nil

library defs
  import: base
  build-depends: unlifted:{def, core, reps}
  mixins:
    unlifted:def (Def as A) requires (Rep as Rep.A),
    unlifted:def (Def as D) requires (Rep as Rep.D),
    unlifted:def (Def as F) requires (Rep as Rep.F),
    unlifted:def (Def as I) requires (Rep as Rep.I),
    unlifted:def (Def as I8) requires (Rep as Rep.I8),
    unlifted:def (Def as I16) requires (Rep as Rep.I16),
    unlifted:def (Def as I32) requires (Rep as Rep.I32),
    unlifted:def (Def as I64) requires (Rep as Rep.I64),
    unlifted:def (Def as U) requires (Rep as Rep.U),
    unlifted:def (Def as W) requires (Rep as Rep.W),
    unlifted:def (Def as W8) requires (Rep as Rep.W8),
    unlifted:def (Def as W16) requires (Rep as Rep.W16),
    unlifted:def (Def as W32) requires (Rep as Rep.W32),
    unlifted:def (Def as W64) requires (Rep as Rep.W64)
  reexported-modules:
    A, D, F, I, I8, I16, I32, I64, U, W, W8, W16, W32, W64

library
  import: base
  build-depends: unlifted:{defs, core}
  hs-source-dirs: src
  exposed-modules:
    Unlifted.Prelude
    Unlifted.Class
    Unlifted.Combinators
    Unlifted.Syntax
    Unlifted.Maybe
    Unlifted.List
    Unlifted.Rep
    Unlifted.Rep.A
    Unlifted.Rep.D
    Unlifted.Rep.F
    Unlifted.Rep.I
    Unlifted.Rep.I8
    Unlifted.Rep.L
    Unlifted.Rep.U
    Unlifted.Rep.W
  reexported-modules:
    Unlifted.Levitation
    
