cabal-version: 3.4
name: unlifted
version: 0
synopsis: unlifted classes
description: unlifted classes.
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2021 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with:
  GHC == 8.10.3

source-repository head
  type: git
  location: https://github.com/ekmett/linear-haskell
  subdir: unlifted

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.15 && < 5,
    ghc-prim

  -- enable warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wprepositive-qualified-module

  -- disable warnings
  ghc-options:
    -Wno-simplifiable-class-constraints -Wno-orphans

library core
  import: base
  hs-source-dirs: core
  build-depends: linear-base
  exposed-modules:
    Unlifted.Levitation
    Unlifted.Internal.Class
    Unlifted.Internal.Combinators
    Unlifted.Internal.List
    Unlifted.Internal.Maybe
    Unlifted.Internal.Rebind
    Unlifted.Internal.Syntax
    Unlifted.Internal.Linear.Ur
    Unlifted.Internal.Linear

-- DEFaults and DEFinitions
library def
  import: base
  build-depends: unlifted:{core}
  hs-source-dirs: def
  signatures: Rep
  exposed-modules: Def

library reps
  import: base
  hs-source-dirs: reps
  exposed-modules:
    Rep.A Rep.D Rep.F
    Rep.I Rep.I8 Rep.I16 Rep.I32 Rep.I64
    Rep.L Rep.U
    Rep.S0 Rep.T0
    Rep.W Rep.W8 Rep.W16 Rep.W32 Rep.W64
    Nil

library defs
  import: base
  build-depends: unlifted:{def, core, reps}
  hs-source-dirs: defs
  mixins:
    unlifted:def (Def as Def.A) requires (Rep as Rep.A),
    unlifted:def (Def as Def.D) requires (Rep as Rep.D),
    unlifted:def (Def as Def.F) requires (Rep as Rep.F),
    unlifted:def (Def as Def.I) requires (Rep as Rep.I),
    unlifted:def (Def as Def.I8) requires (Rep as Rep.I8),
    unlifted:def (Def as I16) requires (Rep as Rep.I16),
    unlifted:def (Def as I32) requires (Rep as Rep.I32),
    unlifted:def (Def as I64) requires (Rep as Rep.I64),
    unlifted:def (Def as Def.U) requires (Rep as Rep.U),
    unlifted:def (Def as S0) requires (Rep as Rep.S0),
    unlifted:def (Def as Def.T0) requires (Rep as Rep.T0),
    unlifted:def (Def as Def.W) requires (Rep as Rep.W),
    unlifted:def (Def as W8) requires (Rep as Rep.W8),
    unlifted:def (Def as W16) requires (Rep as Rep.W16),
    unlifted:def (Def as W32) requires (Rep as Rep.W32),
    unlifted:def (Def as W64) requires (Rep as Rep.W64)
  -- implemented
  exposed-modules: A D F I I8 T0 L U W
  -- TODO
  reexported-modules: I16, I32, I64, S0, W8, W16, W32, W64

library
  import: base
  build-depends: unlifted:{defs, core}
  hs-source-dirs: src
  exposed-modules:
    Unlifted.Prelude
    Unlifted.Class
    Unlifted.Combinators
    Unlifted.Syntax
    Unlifted.Maybe
    Unlifted.List
    Unlifted.Rep
  reexported-modules:
    Unlifted.Levitation,
    A as Unlifted.Rep.A,
    D as Unlifted.Rep.D,
    F as Unlifted.Rep.F,
    I as Unlifted.Rep.I,
    I8 as Unlifted.Rep.I8,
    L as Unlifted.Rep.L,
    U as Unlifted.Rep.U,
    W as Unlifted.Rep.W

